--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   padding: 20px;
-  font-family: "Montserrat", sans-serif;
-  background-color: #f7f7f7;
+  font-family: "Montserrat", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: purple;
 }
 
 .container {
-  background-color: white;
+  background-color: greenyellow;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
   max-width: 600px;
@@ -26,6 +26,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: blue;
 }
 
 label {
